# ChangeLog for xfce-base/libxfce4util
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.120 2009/04/21 04:24:34 darkside Exp $

*libxfce4util-4.6.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -libxfce4util-4.6.0.ebuild, +libxfce4util-4.6.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

  22 Mar 2009; Christoph Mende <angelos@gentoo.org>
  libxfce4util-4.6.0.ebuild:
  Bumped glib dependency to 2.12

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org> libxfce4util-4.4.3.ebuild,
  libxfce4util-4.6.0.ebuild:
  Add ~sh

*libxfce4util-4.6.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +libxfce4util-4.6.0.ebuild:
  Xfce-4.6 bump

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -libxfce4util-4.4.2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> libxfce4util-4.4.3.ebuild:
  Stable for HPPA (bug #249942).

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> libxfce4util-4.4.3.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #249942

  08 Dec 2008; Brent Baude <ranger@gentoo.org> libxfce4util-4.4.3.ebuild:
  Marking libxfce4util-4.4.3 ppc64 stable for bug 249942

  06 Dec 2008; Jeremy Olexa <darkside@gentoo.org> libxfce4util-4.4.3.ebuild:
  amd64 stable, bug 249942

  06 Dec 2008; nixnut <nixnut@gentoo.org> libxfce4util-4.4.3.ebuild:
  Stable on ppc wrt bug 249942

*libxfce4util-4.4.3 (30 Oct 2008)

  30 Oct 2008; Christoph Mende <angelos@gentoo.org>
  +libxfce4util-4.4.3.ebuild:
  Xfce-4.4.3 bump

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> libxfce4util-4.4.2.ebuild:
  Stable for HPPA (bug #201747).

  12 Dec 2007; Brent Baude <ranger@gentoo.org> libxfce4util-4.4.2.ebuild:
  Marking libxfce4util-4.4.2 ppc64 stable for bug 201747

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> libxfce4util-4.4.2.ebuild:
  alpha/ia64/sparc stable wrt #201747

  09 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>