@@ -1,6 +1,6 @@
 DIST libxfce4util-4.4.3.tar.bz2 390566 RMD160 256f4e759562113be2dc82265752a218340deeda SHA1 08e9d64e4c66ea2420a9a0ab678cf5a064585b37 SHA256 cbed16df6bf97e3e9cd885801db0be012ec70cd1d99c1b28559923c66f877770
 DIST libxfce4util-4.6.1.tar.bz2 405327 RMD160 e54d6c7291bbd7e658bc612b52b1c8d02c47d5ae SHA1 6d14099aa095b2f5d9b6a4348968b741b9ad661d SHA256 ceecdc7d3c89f547606c2d77a8a42ccf9975c809374fab84ff0833a08510c16b
-EBUILD libxfce4util-4.4.3.ebuild 626 RMD160 6118ba3a7a1794e2774dce07c2fabf7b688f107b SHA1 554406b782679f2e58e1544dd2912e859375b0f6 SHA256 01922a8d9c9d6baf1773b374c9ce2fc617d082921837b2f6edb25ead5b96050c
-EBUILD libxfce4util-4.6.1.ebuild 664 RMD160 ade026f3911ebb486fa13261e5f6b8e2b6e53bef SHA1 14bcfb91bb31608fda90cf1e83402c5fb092751a SHA256 a8d83ed2240fb38d896d9cfa0a1eba771f22e1a0e1f907943a3f21c1f90340bc
-MISC ChangeLog 14748 RMD160 904a5b04de678af424dad6fad52dcb19e8070245 SHA1 b2579e71a1f217384d4bbfba24df40cc4d39bf62 SHA256 201a91b8489c5a9236e406e379b51cf5cd8ac3320f25ca284b83194a4f3e8391
+EBUILD libxfce4util-4.4.3.ebuild 643 RMD160 06ced2d0f6b15c86971524783edd139673e71dbc SHA1 17f334d74b9e1c292bf559cec013a097feb6d84f SHA256 7d256fc180a66d5500b3311e0cbcb40e9537255d6517d4218ef951c202442892
+EBUILD libxfce4util-4.6.1.ebuild 680 RMD160 3a172aaa302958c9ee62028b1353237b452dbc36 SHA1 adac96332903922c6b9c42938cac0274271b550d SHA256 353d5c48ef8c4a3cb9ab8b76708be933984ee08996496e36922a826b49803ce7
+MISC ChangeLog 14886 RMD160 2368350394e0181ff0f2de465eab1627666da5b9 SHA1 9b7d1065b8095052d8d08058a0b2bc73fe0908d9 SHA256 91d4ba9c936f73840332ab9d63671a6cd93c8f41e65b5baf23b4e6e8d23e92c5
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
