@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfce4util
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.120 2009/04/21 04:24:34 darkside Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.121 2009/05/21 19:53:00 angelos Exp $
+
+  21 May 2009; Christoph Mende <angelos@gentoo.org>
+  libxfce4util-4.4.3.ebuild, libxfce4util-4.6.1.ebuild:
+  Fixed license (bug #268796)
 
 *libxfce4util-4.6.1 (21 Apr 2009)
 
